adding rating system

--- a/src/app/Components/detail-page/detail-page.component.html
+++ b/src/app/Components/detail-page/detail-page.component.html
@@ -108,9 +108,13 @@
 
 </div>  
 
+<br>
+<div class="d-flex justify-content-end">
 
+<app-rating-view></app-rating-view>
+</div>
 
-
+<br>
 
 <!-- description Start From Here --> <!-- description Start From Here --> <!-- description Start From Here -->
 
@@ -139,9 +143,11 @@
                    
                       </swiper>
                 </div>  -->
-
-                <p class="et">Descriptions</p>
+    <br>
+                             <br>
+                <p class="i-heading">Descriptions</p>
                 <br>
+                          
                 <div class="googleads">
                   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                   <!-- Responsive Ad -->
@@ -157,8 +163,11 @@
                 </div>
                 <p class="descriptions">{{data.descriptions}}</p>
 
-                <p class="et">Technical Specs</p>
+    <br>
+                             <br>
+                <p class="i-heading">Technical Specs</p>
                 <br>
+                   
                 <table class="table table-hover s-animation">
                   <thead>
               
