--- a/src/app/Components/detail-page/detail-page.component.scss
+++ b/src/app/Components/detail-page/detail-page.component.scss
@@ -122,6 +122,7 @@ body {
 
 .detailView {
 
+
   display: flex;
   flex-direction: column !important;
 
@@ -155,11 +156,7 @@ background: #ffffff;
 
 
 }
-.et{
-  font-family: open sans;
-  font-weight: 700;
-  font-size: 15px;
-}
+
 .logo {
   width: 100px;
   height: 60px;
@@ -437,7 +434,7 @@ swiper {
   
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   overflow: hidden;
 
 }
@@ -449,7 +446,7 @@ padding: 20px;
 display: flex;
 justify-content: center;
 flex-direction: column;
-align-items: center;
+align-items: flex-start;
 
 }
 mat-tab-group{
