--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 
 // html, body { height: 100%; }
  body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+ @import url('https://fonts.googleapis.com/css2?family=Jura&family=Open+Sans:wght@300;400;600&family=Roboto+Mono:wght@300;600&display=swap');
+
 //@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto:wght@300;400&display=swap');
 .ads250x250{
   width: 280px;
@@ -37,6 +39,11 @@ display: none !important;
     
     background-repeat: no-repeat;
     min-height: 100vh;
+ }
+ .i-heading{
+  font-family: 'Roboto';
+  font-weight: 300;
+  font-size: 20px;
  }
 // .bg-white{
 //   background-color: white;
